# secret_waves

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 0054af00b447_add_s3_key_field_to_attachment_model.py  08beacb0b613_add_post_views_table.py  487128097b9a_add_status_field_to_post_model.py  e7f397674304_change_name_type_field_in_attachment_.py  f0ecfccdae94_init_migration.py  f3e133dd41a0_init_migration.py
src/: __init__.py
src/admin_panel/: filters.py  views.py
src/admin_panel/templates/: moderation_posts.html  posts_moderation.html
src/admin_panel/views/: posts.py  users.py
src/core/: dto.py  exceptions.py
src/core/auth/: id_providers.py  models.py  services.py
src/core/database/: mixins.py  transaction_manager.py
src/core/files/: dto.py  exceptions.py  file_manager.py
src/core/posts/: exceptions.py  mappers.py  models.py  repositories.py  services.py
src/core/users/: mappers.py  models.py  repositories.py
src/main/: admin.py  config.py  providers.py  tg_bot.py
src/telegram_bot/constants/: messages.py
src/telegram_bot/data/: messages.yaml
src/telegram_bot/dialogs/main/: dialogs.py  getters.py  keyboards.py  states.py  windows.py
src/telegram_bot/dialogs/posts/: dialogs.py  getters.py  handlers.py  keyboards.py  states.py  windows.py
src/telegram_bot/filters/: buttons.py
src/telegram_bot/handlers/private/: create_post.py  posts.py  start.py
src/telegram_bot/keyboards/: default.py  inline.py
src/telegram_bot/middlewares/: id_provider.py
src/telegram_bot/services/: message_service.py
