[project]
name = "secret-waves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-cli>=1.1.0",
    "aiogram-dialog>=2.3.1",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "uvloop>=0.21.0",
]


[tool.mypy]
ignore_missing_imports = true
python_version = "3.13"


[tool.ruff]
# https://docs.astral.sh/ruff/rules/
lint.select = ["ALL"]
lint.ignore = [
    "ANN",    # flake8-annotations
    "D",      # pydocstyle (D)
    "B904",   # raise-without-from-inside-except
    "ERA001", # commented-out-code
    "RUF003", # raise-without-from-inside-except
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    "SIM108", # if-else-block-instead-of-if-exp
    "TRY003", # raise-vanilla-args
    "TCH003", # typing-only-standard-library-import
    "E731",   # do-not-use-lambda
    "BLE001", # do-not-catch-blind-exception
    "G004",   # logging-f-string
    "TRY301", # use-exception-inner-function
    "FBT001", # boolean-positional-arg-in-function-definition
    "FBT002", # boolean-keyword-arg-in-function-definition
    "RUF002"
]

# https://docs.astral.sh/ruff/settings/
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "dist",
    "node_modules",
    "venv",
    ".helm",
]

# Same as Black
line-length = 79

# Assume Python 3.10
target-version = "py313"


[tool.ruff.lint.isort]
force-wrap-aliases = true
force-single-line = false
combine-as-imports = true
lines-between-types = 1


[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
